# sketchbook

./: .gitignore  BitBlaster.html  README.md  onclone.sh  scare2021_shirt.html
.et-al/: .clang-format  .gitignore  preferences.txt
BasicOTA/: BasicOTA.ino
Blink/: Blink.ino
BlinkPattern/: .gitignore  BlinkPattern.ino  relib
adaexpress/: .lard  adaexpress.ino  relib
beholder/: .gitignore  beholder.ino  boolish.cpp  boolish.h  cheaptricks.cpp  digitalpin.h  eztypes.h  lardls  millievent.h  minimath.h  operations.html  pinclass.h  relib  steppertest.h
blooming_flower/: blooming_flower.html  blooming_flower.ino
clockWebServer/: .gitignore  clockWebServer.ino  hms.cpp  hms.h  relib  sprinter.cpp  sprinter.h
clockolanthe/: .gitignore  cacm0  clockdriver.h  clockhand.cpp  clockhand.h  clockolanthe.ino  clockserver.cpp  clockserver.h  design.txt  hms.cpp  hms.h  motordrivers.h  options.h  relib
dfplayermini/: .gitignore  dfplayermini.ino  relib
digitalPinTester/: .gitignore  digitalPinTester.ino  digitalPinTester.prefs  relib
doorlock/: .gitignore  doorlock.ino  doorlock.prefs  relib
dwarvenMines/: .gitignore  boss.h  broadcastNode.h  c0  c1  c3  cf  configurateer.h  cu  dwarvenMines.h  dwarvenMines.ino  ledString.h  leverSet.h  lslinks  nowDevice.h  relib  remoteGpio.h  scaryMessage.h  simpleDebouncedPin.h  simplePin.h  simpleTicker.h  simpleUtil.h  stripper.h  vortexFx-pinouts.html  vortexLighting.h
espSerialServer/: .gitignore  espSerialServer.ino  options.h  (+1 more)
octoid/: .gitignore  CMakeLists.txt  OctoField.inot  README.md  octoid.h  octoid.ino  relib
(+66 files in other folders)
